Fix overflowing button and add responsiveness

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,6 +7,7 @@
   width: 100vw;
   display: flex;
   background-color: #282c34;
+  overflow: hidden;
 }
 
 .App-logo {
@@ -44,3 +45,12 @@
   }
 }
 
+@media (max-width: 1200px) {
+  .cv-template{
+    display: none !important;
+  }
+  .template-container{
+    width: 0px !important;
+    padding: 0px !important;
+  }
+}
