--- a/src/styles/Builder.css
+++ b/src/styles/Builder.css
@@ -27,7 +27,7 @@
     overflow: auto;
     overflow: auto;
     height: 100%;
-    width: 80%;
+    width: 100%;
 }
 
 .section-container {
