--- a/src/styles/TemplateContainer.css
+++ b/src/styles/TemplateContainer.css
@@ -29,13 +29,23 @@ html{
     outline: none;
     color: white;
     font-weight: 600;
+    position: fixed;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    width: fit-content;
+    margin: auto;
     padding: 10px 50px;
     border-radius: 3px;
+    transition: 400ms;
     font-size: 1rem;
+    border: 2px solid rgb(0, 128, 255);
 }
 .printCv-button:hover{
-    background-color: rgba(0, 128, 255, 0.672);
-    color: #c6c6c6;
+    border: 2px solid rgb(0, 128, 255);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 128, 255);
     cursor: pointer;
 }
 
@@ -331,18 +341,23 @@ html{
 
 
 @media print {
-    .cv-template{
-        transform: scale(1.3);
-    }
     .segment-header{
         page-break-after: avoid;
     }
     .subSegment-container{
         page-break-inside: avoid;
     }
+        .cv-template {
+            display: flex !important;
+            transform: scale(1) !important;
+        }
+    
+        .template-container {
+            width: 100% !important;
+            padding: 20px !important;
+        }
 }
 @page {
-    size: auto;
-    margin-bottom: 50mm;
-    
+    size: A4;
+    scale: 1.34;
 }
